--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -3409,7 +3409,7 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_BLINKM is not set
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
-# CONFIG_LEDS_MSM_GPIO_DUAL_REAR_FLASH_AND_FRONT_FLASH is not set
+CONFIG_LEDS_MSM_GPIO_DUAL_REAR_FLASH_AND_FRONT_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
 # CONFIG_LEDS_AW2013 is not set
 
@@ -3429,7 +3429,7 @@ CONFIG_LEDS_TRIGGERS=y
 # iptables trigger is under Netfilter config (LED target)
 #
 # CONFIG_LEDS_TRIGGER_TRANSIENT is not set
-# CONFIG_LEDS_TRIGGER_CAMERA is not set
+CONFIG_LEDS_TRIGGER_CAMERA=y
 CONFIG_SWITCH=y
 # CONFIG_SWITCH_GPIO is not set
 # CONFIG_ACCESSIBILITY is not set
