Def-Config: Disable Unnecessary Touch-Screen Drivers
Signed-off-by: Shoaib0597 <Shoaib0595@gmail.com>

--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -1710,12 +1710,12 @@ CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_USB_KBTAB is not set
 # CONFIG_TABLET_SERIAL_WACOM4 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
@@ -1725,7 +1725,7 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_AD7877 is not set
 # CONFIG_TOUCHSCREEN_AD7879 is not set
 # CONFIG_TOUCHSCREEN_AR1021_I2C is not set
-CONFIG_TOUCHSCREEN_ATMEL_MXT=y
+# CONFIG_TOUCHSCREEN_ATMEL_MXT is not set
 # CONFIG_TOUCHSCREEN_ATMEL_MAXTOUCH_TS is not set
 # CONFIG_TOUCHSCREEN_AUO_PIXCIR is not set
 # CONFIG_TOUCHSCREEN_BU21013 is not set
@@ -1767,14 +1767,14 @@ CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
-CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
-CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
 CONFIG_PRODUCT_NAME="GARLIC"
 CONFIG_TP_TGESTURE=y
 CONFIG_FT5XX_TGESTURE_FUNCTION=y
 # CONFIG_TOUCHSCREEN_GT9XX is not set
-CONFIG_TOUCHSCREEN_MAXIM_STI=y
+# CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 CONFIG_TOUCHSCREEN_FT5XX=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
