--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -1179,7 +1179,7 @@ CONFIG_USB_EXT_TYPE_C_PERICOM=y
 #
 # CONFIG_ALTERA_STAPL is not set
 CONFIG_MSM_QDSP6V2_CODECS=y
-CONFIG_MSM_ULTRASOUND=y
+# CONFIG_MSM_ULTRASOUND is not set
 
 #
 # Intel MIC Bus Driver
