--- a/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
+++ b/arch/arm/boot/dts/qcom/msm-pmi8950.dtsi
@@ -31,7 +31,7 @@
 			qcom,secondary-pon-reset;
 			qcom,hard-reset-poweroff-type =
 				<PON_POWER_OFF_SHUTDOWN>;
-
+                        //when LCD turn off,flashlight blinking.wupingzhou,20160625
 			pon_perph_reg: qcom,pon_perph_reg {
 				regulator-name = "pon_spare_reg";
 				qcom,pon-spare-reg-addr = <0x8c>;
@@ -163,6 +163,8 @@
 				qcom,pull = <1>;
 				qcom,vin-sel = <0>;
 				qcom,out-strength = <2>;
+				//add by lishengli 20160703 for fix smb be disable after long press power key to restart dievice
+				//status = "disabled";
 			};
 		};
 
@@ -205,10 +207,13 @@
 			compatible = "qcom,qpnp-smbcharger";
 			#address-cells = <1>;
 			#size-cells = <1>;
+
+                        //add by lishengli 20160519
 			qcom,iterm-ma = <250>;
 			qcom,float-voltage-mv = <4400>;
 			qcom,resume-delta-mv = <200>;
-			qcom,fastchg-current-ma = <1500>;
+			//add by lishengli
+			qcom,fastchg-current-ma = <1500>;		
 			qcom,chg-inhibit-fg;
 			qcom,rparasitic-uohm = <100000>;
 			qcom,bms-psy-name = "bms";
@@ -217,10 +222,14 @@
 			qcom,force-aicl-rerun;
 			qcom,aicl-rerun-period-s = <180>;
 			qcom,autoadjust-vfloat;
-			qcom,float-voltage-comp = <13>;
-			qcom,fastchg-current-comp = <700>;
+			//add by lishengli 20160412
+			qcom,float-voltage-comp = <13>; //4100v
+			qcom,fastchg-current-comp = <700>; //900ma
+            //LINE<REQ><><DEFUALT USB DCP ICL SET TO 1400MA><20160708>huiyong.yin
 			qcom,no-parallel-defualt-dcp-icl-ma = <1400>;
-			qcom,no_support_qc;
+
+			qcom,no_support_qc;//<20160720><don't support qc>wangyanhui add 
+
 			qcom,speed-current = <1500 1400 1200 1100 900 700 600 450 400 0>;
 
 			qcom,chgr@1000 {
@@ -324,24 +333,24 @@
 			#address-cells = <1>;
 			#size-cells = <1>;
 			qcom,fg-cc-cv-threshold-mv = <4390>;
-
+			//add by lishengli 20160519 
 			qcom,hold-soc-while-full;
 			qcom,vbat-estimate-diff-mv =<120>;
 			qcom,resume-soc = <98>;
 			status = "okay";
 			qcom,bcl-lm-threshold-ma = <127>;
 			qcom,bcl-mh-threshold-ma = <405>;
-
+			//add by lishengli 20160519   fixed can't charge to full
 			qcom,fg-iterm-ma = <300>;
-
+			//add by lishengli 20160519
 			qcom,fg-chg-iterm-ma = <250>;
 			qcom,pmic-revid = <&pmi8950_revid>;
 			qcom,fg-cutoff-voltage-mv = <3300>;
 			qcom,cycle-counter-en;
 			qcom,ext-sense-type;
 
-			qcom,fg-delta-soc = <1>;
-
+			qcom,fg-delta-soc = <1>;//LINE<BUG><HHABM-151><><><20150620>huiyong.yin
+			//add by lishengli for 3430    20160412
 			qcom,thermal-coefficients =[c8 86 c1 50 d3 37];
 			qcom,capacity-learning-on;
 
@@ -422,8 +431,12 @@
 			qcom,inhibit-derating-ua = <550000>;
 		};
 
-
-
+		//wangyanhui add start for green led blink
+		/*qcom,leds@a100 {
+			compatible = "qcom,leds-qpnp";
+			reg = <0xa100 0x100>;
+			label = "mpp";
+		};*/
 		qcom,leds@a100 {
 			compatible = "qcom,leds-qpnp";
 			reg = <0xa100 0x100>;
@@ -442,10 +455,11 @@
 				qcom,pwm-channel = <0>;
 				qcom,pwm-us = <5000000>;
 				pwms = <&pmi8950_pwm 0 0>;
-				pwm-names="green";
+				pwm-names="green"; // add this
 				qcom,use-blink;
 			};
 		};
+		//wangyanhui add end for green led blink
 	};
 
 	qcom,pmi8950@3 {
@@ -454,6 +468,16 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 
+		//wangyanhui modify end for green led blink use pwm
+		/*pmi8950_pwm: pwm@b000 {
+			status = "disabled";
+			compatible = "qcom,qpnp-pwm";
+			reg = <0xb000 0x100>;
+			reg-names = "qpnp-lpg-channel-base";
+			qcom,channel-id = <0>;
+			qcom,supported-sizes = <6>, <9>;
+			#pwm-cells = <2>;
+		};*/
 		pmi8950_pwm: pwm@b000 {
 				compatible = "qcom,qpnp-pwm";
 				reg = <0xb000 0x100>;
@@ -465,10 +489,10 @@
 				qcom,dtest-output = <1>;
 				#pwm-cells = <2>;
 				qcom,pwm {
-				qcom,duty = <500000>;
+				qcom,duty = <500000>; //PWM duty time in microseconds 
 				label = "pwm";};
 		 };
-
+		//wangyanhui modify end for green led blink use pwm
 
 		labibb: qpnp-labibb-regulator {
 			status = "disabled";
@@ -482,8 +506,10 @@
 				reg = <0xdc00 0x100>;
 				reg-names = "ibb_reg";
 				regulator-name = "ibb_reg";
+
 				regulator-min-microvolt = <4600000>;
 				regulator-max-microvolt = <6000000>;
+
 				qcom,qpnp-ibb-min-voltage = <1400000>;
 				qcom,qpnp-ibb-step-size = <100000>;
 				qcom,qpnp-ibb-slew-rate = <2000000>;
@@ -491,11 +517,14 @@
 				qcom,qpnp-ibb-init-voltage = <5500000>;
 				qcom,qpnp-ibb-init-amoled-voltage = <4000000>;
 				qcom,qpnp-ibb-init-lcd-voltage = <5500000>;
+
 				qcom,qpnp-ibb-soft-start = <1000>;
+
 				qcom,qpnp-ibb-discharge-resistor = <32>;
 				qcom,qpnp-ibb-lab-pwrup-delay = <8000>;
 				qcom,qpnp-ibb-lab-pwrdn-delay = <8000>;
 				qcom,qpnp-ibb-en-discharge;
+
 				qcom,qpnp-ibb-full-pull-down;
 				qcom,qpnp-ibb-pull-down-enable;
 				qcom,qpnp-ibb-switching-clock-frequency = <1480>;
@@ -509,8 +538,10 @@
 				reg = <0xde00 0x100>;
 				reg-names = "lab";
 				regulator-name = "lab_reg";
+
 				regulator-min-microvolt = <4600000>;
 				regulator-max-microvolt = <6000000>;
+
 				qcom,qpnp-lab-min-voltage = <4600000>;
 				qcom,qpnp-lab-step-size = <100000>;
 				qcom,qpnp-lab-slew-rate = <5000>;
@@ -518,18 +549,22 @@
 				qcom,qpnp-lab-init-voltage = <5500000>;
 				qcom,qpnp-lab-init-amoled-voltage = <4600000>;
 				qcom,qpnp-lab-init-lcd-voltage = <5500000>;
+
 				qcom,qpnp-lab-soft-start = <800>;
+
 				qcom,qpnp-lab-full-pull-down;
 				qcom,qpnp-lab-pull-down-enable;
-				qcom,qpnp-lab-switching-clock-frequency = <1600>;
+				qcom,qpnp-lab-switching-clock-frequency =
+									<1600>;
 				qcom,qpnp-lab-limit-maximum-current = <800>;
 				qcom,qpnp-lab-limit-max-current-enable;
 				qcom,qpnp-lab-ps-threshold = <40>;
 				qcom,qpnp-lab-ps-enable;
 				qcom,qpnp-lab-nfet-size = <100>;
 				qcom,qpnp-lab-pfet-size = <100>;
-				qcom,qpnp-lab-max-precharge-time = <500>;
+				qcom,qpnp-lab-max-precharge-time = <300>;
 			};
+
 		};
 
 		wled: qcom,leds@d800 {
@@ -559,8 +594,10 @@
 			qcom,hyb-thres = <625>;
 			qcom,sync-dly-us = <800>;
 			qcom,fs-curr-ua = <20000>;
+			qcom,en-phase-stag;
+			qcom,ibb-pwrup-dly = <8>;
 			qcom,led-strings-list = [00 01];
-			qcom,cons-sync-write-delay-us = <1000>;
+			//qcom,en-ext-pfet-sc-pro; //wangyanhui delete for green led blink use pwm
 		};
 
 		flash_led: qcom,leds@d300 {
@@ -585,7 +622,7 @@
 			qcom,headroom-sense-ch0-enabled;
 			qcom,headroom-sense-ch1-enabled;
 			qcom,pmic-revid = <&pmi8950_revid>;
-
+ 
 			pmi8950_flash0: qcom,flash_0 {
 				label = "flash";
 				qcom,led-name = "led:flash_0";
@@ -602,12 +639,12 @@
 				qcom,led-name = "led:flash_1";
 				qcom,default-led-trigger =
 						"flash1_trigger";
-				qcom,max-current = <1000>;
+				qcom,max-current = <1000>;   //modify current of front flash
 				qcom,duration = <1280>;
 				qcom,id = <1>;
-				qcom,current = <625>;
+				qcom,current = <625>;           //modify current of front flash
 			};
-
+			//wangyanhui add for front flightlight start 
 			pmi8950_flash2: qcom,flash_2 {
 				label = "flash";
 				qcom,led-name = "led:flash_2";
@@ -618,7 +655,8 @@
 				qcom,id = <3>;
 				qcom,current = <625>;
 			};
-
+			//wangyanhui add for front flightlight end
+ 
 			pmi8950_torch0: qcom,torch_0 {
 				label = "torch";
 				qcom,led-name = "led:torch_0";
@@ -634,11 +672,11 @@
 				qcom,led-name = "led:torch_1";
 				qcom,default-led-trigger =
 						"torch1_trigger";
-				qcom,max-current = <200>;
+				qcom,max-current = <200>;        //modify current of front flash
 				qcom,id = <1>;
-				qcom,current = <120>;
+				qcom,current = <120>;                //modify current of front flash
 			};
-
+			//wangyanhui add for front flightlight start 
 			pmi8950_torch2: qcom,torch_2 {
 				label = "torch";
 				qcom,led-name = "led:torch_2";
@@ -647,8 +685,9 @@
 				qcom,max-current = <200>;
 				qcom,id = <3>;
 				qcom,current = <120>;
-
+				
 			};
+			//wangyanhui add for front flightlight end 
 
 			pmi8950_switch: qcom,switch {
 				label = "switch";
@@ -659,10 +698,13 @@
 				qcom,duration = <1280>;
 				qcom,id = <2>;
 				qcom,current = <625>;
+                                //when LCD turn off,flashlight blinking.wupingzhou,20160625
 				reg0 {
 					regulator-name = "pon_spare_reg";
 				};
 			};
+
+
 		};
 
 		pmi_haptic: qcom,haptic@c000 {
@@ -671,12 +713,11 @@
 			interrupts = <0x3 0xc0 0x0>,
 					<0x3 0xc0 0x1>;
 			interrupt-names = "sc-irq", "play-irq";
-			vcc_pon-supply = <&pon_perph_reg>;
 			qcom,play-mode = "direct";
 			qcom,wave-play-rate-us = <5263>;
 			qcom,actuator-type = "erm";
 			qcom,wave-shape = "square";
-			qcom,vmax-mv = <3000>;
+			qcom,vmax-mv = <3000>; //wangyahui set 3000 //2000
 			qcom,ilim-ma = <800>;
 			qcom,sc-deb-cycles = <8>;
 			qcom,int-pwm-freq-khz = <505>;
