--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -2140,9 +2140,9 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_SMB349_USB_CHARGER is not set
 # CONFIG_SMB349_DUAL_CHARGER is not set
-CONFIG_SMB1351_USB_CHARGER=y
+# CONFIG_SMB1351_USB_CHARGER is not set
 # CONFIG_SMB350_CHARGER is not set
-CONFIG_SMB135X_CHARGER=y
+# CONFIG_SMB135X_CHARGER is not set
 # CONFIG_SMB1360_CHARGER_FG is not set
 # CONFIG_SMB358_CHARGER is not set
 # CONFIG_SMB23X_CHARGER is not set
