--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -284,7 +284,7 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_DEADLINE is not set
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_IOSCHED_BFQ=y
-# CONFIG_CGROUP_BFQIO is not set
+CONFIG_CGROUP_BFQIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 # CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
