--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -417,7 +417,7 @@ CONFIG_CMA_AREAS=7
 # CONFIG_ZPOOL is not set
 CONFIG_ZBUD=y
 CONFIG_ZSMALLOC=y
-# CONFIG_PGTABLE_MAPPING is not set
+CONFIG_PGTABLE_MAPPING=y
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_ZCACHE=y
