--- a/arch/arm64/configs/lineageos_garlic_defconfig
+++ b/arch/arm64/configs/lineageos_garlic_defconfig
@@ -41,10 +41,10 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-lineageos"
+CONFIG_LOCALVERSION="-MiniVelocity_v1.5-Shoaib0597"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-CONFIG_SWAP=y
+# CONFIG_SWAP is not set
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 CONFIG_CROSS_MEMORY_ATTACH=y
@@ -285,8 +285,6 @@ CONFIG_IOSCHED_NOOP=y
 # CONFIG_IOSCHED_CFQ is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
-# CONFIG_DEFAULT_DEADLINE is not set
-# CONFIG_DEFAULT_CFQ is not set
 # CONFIG_DEFAULT_BFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
@@ -409,7 +407,6 @@ CONFIG_BOUNCE=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 # CONFIG_TRANSPARENT_HUGEPAGE is not set
 CONFIG_CLEANCACHE=y
-# CONFIG_FRONTSWAP is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 # CONFIG_CMA_DEBUGFS is not set
@@ -421,7 +418,6 @@ CONFIG_PGTABLE_MAPPING=y
 # CONFIG_ZSMALLOC_STAT is not set
 CONFIG_GENERIC_EARLY_IOREMAP=y
 CONFIG_ZCACHE=y
-# CONFIG_BALANCE_ANON_FILE_RECLAIM is not set
 CONFIG_KSWAPD_CPU_AFFINITY_MASK=""
 # CONFIG_FORCE_ALLOC_FROM_DMA_ZONE is not set
 CONFIG_PROCESS_RECLAIM=y
@@ -440,8 +436,7 @@ CONFIG_SETEND_EMULATION=y
 CONFIG_CMDLINE=""
 CONFIG_EFI_STUB=y
 CONFIG_EFI=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
-CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
+# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_DMI=y
 
 #
@@ -514,6 +509,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_RELAXED is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_GOV_USERSPACE is not set
@@ -521,6 +517,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPUFREQ_DT is not set
+CONFIG_CPU_FREQ_GOV_RELAXED=y
 # CONFIG_CPU_BOOST is not set
 
 #
@@ -1110,9 +1107,7 @@ CONFIG_OF_BATTERYDATA=y
 CONFIG_BLK_DEV=y
 # CONFIG_BLK_DEV_NULL_BLK is not set
 # CONFIG_BLK_DEV_PCIESSD_MTIP32XX is not set
-CONFIG_ZRAM=y
-# CONFIG_ZRAM_LZ4_COMPRESS is not set
-# CONFIG_ZRAM_DEBUG is not set
+# CONFIG_ZRAM is not set
 # CONFIG_BLK_CPQ_CISS_DA is not set
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
@@ -1274,7 +1269,6 @@ CONFIG_SCSI_UFSHCD=y
 CONFIG_SCSI_UFSHCD_PLATFORM=y
 CONFIG_SCSI_UFS_QCOM=y
 CONFIG_SCSI_UFS_QCOM_ICE=y
-CONFIG_SCSI_UFS_TEST=y
 # CONFIG_SCSI_HPTIOP is not set
 # CONFIG_SCSI_DMX3191D is not set
 # CONFIG_SCSI_FUTURE_DOMAIN is not set
@@ -1726,15 +1720,7 @@ CONFIG_INPUT_TABLET=y
 # CONFIG_TABLET_SERIAL_WACOM4 is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v21 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v21 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_SPI_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_v26 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_v26 is not set
-# CONFIG_SECURE_TOUCH_SYNAPTICS_DSX_V26 is not set
 CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
@@ -1777,14 +1763,10 @@ CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_SUR40 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE_EXTRA_SYSFS is not set
-# CONFIG_SECURE_TOUCH is not set
 # CONFIG_TOUCHSCREEN_IT7260_I2C is not set
 CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_FT5X06 is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4 is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV is not set
-# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_FW_UPDATE is not set
 CONFIG_PRODUCT_NAME="GARLIC"
 CONFIG_TP_TGESTURE=y
 CONFIG_FT5XX_TGESTURE_FUNCTION=y
@@ -2559,6 +2541,7 @@ CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 # CONFIG_MSM_JPEGDMA is not set
+CONFIG_LEDS_MSM_GPIO_DUAL_REAR_FLASH_AND_FRONT_FLASH=y
 # CONFIG_TSPP is not set
 # CONFIG_MSM_SDE_ROTATOR is not set
 
@@ -2767,6 +2750,7 @@ CONFIG_FB_MSM_MDSS_WRITEBACK=y
 # CONFIG_FB_MSM_MDSS_EDP_PANEL is not set
 # CONFIG_FB_MSM_MDSS_MDP3 is not set
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 # CONFIG_FB_SSD1307 is not set
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_LCD_CLASS_DEVICE=y
@@ -3369,7 +3353,6 @@ CONFIG_MMC_BLOCK_BOUNCE=y
 # CONFIG_MMC_BLOCK_DEFERRED_RESUME is not set
 # CONFIG_SDIO_UART is not set
 # CONFIG_MMC_TEST is not set
-CONFIG_MMC_BLOCK_TEST=y
 
 #
 # MMC/SD/SDIO Host Controller Drivers
@@ -3424,7 +3407,6 @@ CONFIG_LEDS_CLASS=y
 # CONFIG_LEDS_BLINKM is not set
 CONFIG_LEDS_QPNP=y
 CONFIG_LEDS_QPNP_FLASH=y
-CONFIG_LEDS_MSM_GPIO_DUAL_REAR_FLASH_AND_FRONT_FLASH=y
 CONFIG_LEDS_QPNP_WLED=y
 # CONFIG_LEDS_AW2013 is not set
 
@@ -3832,10 +3814,6 @@ CONFIG_IOMMU_TESTS=y
 #
 # Rpmsg drivers
 #
-
-#
-# SOC (System On Chip) specific Drivers
-#
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -3847,6 +3825,7 @@ CONFIG_DEVFREQ_GOV_POWERSAVE=y
 CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_DEVFREQ_GOV_CPUFREQ=y
 CONFIG_DEVFREQ_GOV_MSM_ADRENO_TZ=y
+CONFIG_ADRENO_IDLER=y
 CONFIG_MSM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_MSM_GPUBW_MON=y
 # CONFIG_ARMBW_HWMON is not set
@@ -4013,6 +3992,13 @@ CONFIG_FAT_DEFAULT_IOCHARSET="iso8859-1"
 CONFIG_NTFS_FS=y
 # CONFIG_NTFS_DEBUG is not set
 CONFIG_NTFS_RW=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+# CONFIG_EXFAT_DELAYED_SYNC is not set
+# CONFIG_EXFAT_KERNEL_DEBUG is not set
+# CONFIG_EXFAT_DEBUG_MSG is not set
+CONFIG_EXFAT_DEFAULT_CODEPAGE=437
+CONFIG_EXFAT_DEFAULT_IOCHARSET="utf8"
 
 #
 # Pseudo filesystems
@@ -4180,7 +4166,6 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
-CONFIG_TIMER_STATS=y
 CONFIG_DEBUG_PREEMPT=y
 
 #
