--- a/drivers/devfreq/Kconfig
+++ b/drivers/devfreq/Kconfig
@@ -181,6 +181,15 @@ config DEVFREQ_GOV_MEMLAT
 	  this uses target specific counters it can conflict with existing profiling
 	  tools.
 
+config DEVFREQ_GOV_CONSERVATIVE
+	tristate "Conservative"
+	depends on MSM_KGSL
+	help
+	  Chooses frequency based on the recent load on the device. Works
+	  similar as conservative governor of cpufreq does and implements
+	  the useful optimizations from Adreno TZ.
+
+
 comment "DEVFREQ Drivers"
 
 config ARM_EXYNOS4_BUS_DEVFREQ
