--- a/arch/arm64/configs/lineage_garlic_defconfig
+++ b/arch/arm64/configs/lineage_garlic_defconfig
@@ -309,14 +309,14 @@ CONFIG_FREEZER=y
 # CONFIG_ARCH_XGENE is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8916=y
-CONFIG_ARCH_MSM8917=y
-CONFIG_ARCH_MSM8920=y
-CONFIG_ARCH_MSM8940=y
-CONFIG_ARCH_MSM8953=y
+# CONFIG_ARCH_MSM8917 is not set
+# CONFIG_ARCH_MSM8920 is not set
+# CONFIG_ARCH_MSM8940 is not set
+# CONFIG_ARCH_MSM8953 is not set
 # CONFIG_ARCH_SDM450 is not set
 CONFIG_ARCH_MSM8937=y
 # CONFIG_ARCH_MSM8996 is not set
-CONFIG_ARCH_MSMCOBALT=y
+# CONFIG_ARCH_MSMCOBALT is not set
 
 #
 # Bus support
@@ -361,7 +361,6 @@ CONFIG_ARM64_4K_PAGES=y
 # CONFIG_ARM64_64K_PAGES is not set
 # CONFIG_ARM64_DCACHE_DISABLE is not set
 # CONFIG_ARM64_ICACHE_DISABLE is not set
-CONFIG_ARCH_MSM8953_SOC_SETTINGS=y
 CONFIG_ARM64_VA_BITS_39=y
 CONFIG_ARM64_VA_BITS=39
 # CONFIG_CPU_BIG_ENDIAN is not set
@@ -957,7 +956,7 @@ CONFIG_NET_SCH_FIFO=y
 # CONFIG_HSR is not set
 CONFIG_RMNET_DATA=y
 CONFIG_RMNET_DATA_FC=y
-CONFIG_RMNET_DATA_DEBUG_PKT=y
+# CONFIG_RMNET_DATA_DEBUG_PKT is not set
 CONFIG_RPS=y
 CONFIG_RFS_ACCEL=y
 CONFIG_XPS=y
@@ -1104,7 +1103,6 @@ CONFIG_OF_PCI_IRQ=y
 CONFIG_OF_SPMI=y
 CONFIG_OF_RESERVED_MEM=y
 CONFIG_OF_SLIMBUS=y
-CONFIG_OF_CORESIGHT=y
 CONFIG_OF_BATTERYDATA=y
 # CONFIG_OF_OVERLAY is not set
 # CONFIG_PARPORT is not set
@@ -1639,7 +1637,7 @@ CONFIG_CLD_LL_CORE=y
 # CONFIG_CNSS_LOGGER is not set
 # CONFIG_WLAN_FEATURE_RX_WAKELOCK is not set
 # CONFIG_CNSS2 is not set
-# CONFIG_CNSS_UTILS is not set
+CONFIG_CNSS_UTILS=y
 
 #
 # Enable WiMAX (Networking options) to see the WiMAX drivers
@@ -1666,7 +1664,7 @@ CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
 CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
 # CONFIG_INPUT_JOYDEV is not set
 CONFIG_INPUT_EVDEV=y
-# CONFIG_INPUT_EVBUG is not set
+CONFIG_INPUT_EVBUG=y
 CONFIG_INPUT_KEYRESET=y
 CONFIG_INPUT_KEYCOMBO=y
 
@@ -1797,7 +1795,8 @@ CONFIG_TOUCHSCREEN_FT5XX=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_BMA150 is not set
-# CONFIG_INPUT_HBTP_INPUT is not set
+CONFIG_INPUT_HBTP_INPUT=y
+# CONFIG_HBTP_INPUT_SECURE_TOUCH is not set
 # CONFIG_INPUT_MMA8450 is not set
 # CONFIG_INPUT_MPU3050 is not set
 # CONFIG_SENSORS_MPU6050 is not set
@@ -2069,10 +2068,6 @@ CONFIG_PINCTRL_MSM=y
 # CONFIG_PINCTRL_MSM8X74 is not set
 CONFIG_PINCTRL_MSM8952=y
 CONFIG_PINCTRL_MSM8937=y
-CONFIG_PINCTRL_MSMCOBALT=y
-CONFIG_PINCTRL_MSM8917=y
-CONFIG_PINCTRL_MSM8940=y
-CONFIG_PINCTRL_MSM8953=y
 CONFIG_ARCH_HAVE_CUSTOM_GPIO_H=y
 CONFIG_ARCH_WANT_OPTIONAL_GPIOLIB=y
 CONFIG_ARCH_REQUIRE_GPIOLIB=y
@@ -3807,7 +3802,7 @@ CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_SMEM=y
 # CONFIG_QPNP_PBS is not set
 CONFIG_MSM_SMD=y
-CONFIG_MSM_SMD_DEBUG=y
+# CONFIG_MSM_SMD_DEBUG is not set
 CONFIG_MSM_GLINK=y
 CONFIG_MSM_GLINK_LOOPBACK_SERVER=y
 CONFIG_MSM_GLINK_SMD_XPRT=y
@@ -3827,7 +3822,6 @@ CONFIG_MSM_EVENT_TIMER=y
 # CONFIG_MSM_IPC_ROUTER_GLINK_XPRT is not set
 # CONFIG_MSM_SYSTEM_HEALTH_MONITOR is not set
 # CONFIG_MSM_GLINK_PKT is not set
-# CONFIG_MSM_TZ_SMMU is not set
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_SYSMON_COMM=y
 CONFIG_MSM_PIL=y
@@ -3905,27 +3899,7 @@ CONFIG_MSM_IRQ=y
 # CONFIG_IPACK_BUS is not set
 # CONFIG_RESET_CONTROLLER is not set
 # CONFIG_FMC is not set
-CONFIG_CORESIGHT=y
-CONFIG_CORESIGHT_EVENT=y
-CONFIG_HAVE_CORESIGHT_SINK=y
-CONFIG_CORESIGHT_FUSE=y
-CONFIG_CORESIGHT_CTI=y
-CONFIG_CORESIGHT_CTI_SAVE_DISABLE=y
-CONFIG_CORESIGHT_CSR=y
-CONFIG_CORESIGHT_TMC=y
-CONFIG_CORESIGHT_TPIU=y
-CONFIG_CORESIGHT_FUNNEL=y
-CONFIG_CORESIGHT_REPLICATOR=y
-# CONFIG_CORESIGHT_TPDA is not set
-# CONFIG_CORESIGHT_TPDM is not set
-# CONFIG_CORESIGHT_DBGUI is not set
-CONFIG_CORESIGHT_STM=y
-# CONFIG_CORESIGHT_STM_DEFAULT_ENABLE is not set
-CONFIG_CORESIGHT_HWEVENT=y
-# CONFIG_CORESIGHT_ETM is not set
-# CONFIG_CORESIGHT_ETMV4 is not set
-# CONFIG_CORESIGHT_REMOTE_ETM is not set
-# CONFIG_CORESIGHT_QPDI is not set
+# CONFIG_CORESIGHT is not set
 
 #
 # PHY Subsystem
@@ -4055,7 +4029,7 @@ CONFIG_CONFIGFS_FS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-# CONFIG_SDCARD_FS is not set
+CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -4074,7 +4048,14 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_PSTORE is not set
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
-# CONFIG_F2FS_FS is not set
+CONFIG_F2FS_FS=y
+CONFIG_F2FS_STAT_FS=y
+CONFIG_F2FS_FS_XATTR=y
+CONFIG_F2FS_FS_POSIX_ACL=y
+CONFIG_F2FS_FS_SECURITY=y
+# CONFIG_F2FS_CHECK_FS is not set
+# CONFIG_F2FS_FS_ENCRYPTION is not set
+# CONFIG_F2FS_FAULT_INJECTION is not set
 # CONFIG_EFIVAR_FS is not set
 CONFIG_NETWORK_FILESYSTEMS=y
 # CONFIG_NFS_FS is not set
@@ -4150,7 +4131,7 @@ CONFIG_PRINTK_TIME=y
 CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_LOG_BUF_MAGIC is not set
 # CONFIG_BOOT_PRINTK_DELAY is not set
-CONFIG_DYNAMIC_DEBUG=y
+# CONFIG_DYNAMIC_DEBUG is not set
 
 #
 # Compile-time checks and compiler options
@@ -4205,7 +4186,7 @@ CONFIG_PANIC_ON_RECURSIVE_FAULT=y
 # CONFIG_PANIC_ON_RT_THROTTLING is not set
 CONFIG_SCHEDSTATS=y
 # CONFIG_SCHED_STACK_END_CHECK is not set
-CONFIG_TIMER_STATS=y
+# CONFIG_TIMER_STATS is not set
 CONFIG_DEBUG_PREEMPT=y
 
 #
@@ -4308,8 +4289,6 @@ CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_FREE_PAGES_RDONLY is not set
 CONFIG_DEBUG_RODATA=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
-# CONFIG_CORESIGHT_LINKS_AND_SINKS is not set
-# CONFIG_CORESIGHT_SOURCE_ETM4X is not set
 
 #
 # Security options
@@ -4407,7 +4386,7 @@ CONFIG_CRYPTO_XCBC=y
 # Digest
 #
 CONFIG_CRYPTO_CRC32C=y
-# CONFIG_CRYPTO_CRC32 is not set
+CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 # CONFIG_CRYPTO_GHASH is not set
 CONFIG_CRYPTO_MD4=y
